--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -50,6 +50,9 @@ graphics.off()
 Sys.setlocale("LC_ALL", "Chinese")
 ```
 
+**TODO**
+- [ ] 1. 第2段每个参考文献尽量写开
+
 **摘要：**本文以2014-2017年中国重点监测的35个城市的年度空气质量为优天数和月度空气
 质量为优天数为研究对象，利用广义可加混合模型对城市空气质量的影响因素进行研究。结
 果显示，对于年度空气质量为优天数，社会经济影响因素中的全社会用电量和废气治理完成
