--- a/report/papers/paper-severe-gamm.Rmd
+++ b/report/papers/paper-severe-gamm.Rmd
@@ -55,6 +55,7 @@ Sys.setlocale("LC_ALL", "Chinese")
 - [ ] 1. 第2段每个参考文献尽量写开
 - [ ] 2. 增加年度模型的模型解释，主要是对系数进行定量化解释
 - [ ] 3. 月度模型模型解释部分对系数进行定量化解释
+- [ ] 4. 表4中是否临海，是否供暖不显著，去掉
 
 
 **摘要：**本文以2014-2017年中国重点监测的35个城市的年度空气质量严重污染天数和月
