--- a/report/papers/paper-severe-gamm.Rmd
+++ b/report/papers/paper-severe-gamm.Rmd
@@ -113,7 +113,7 @@ days.
 对空气质量污染情况及其影响因素的研究一直是众多学者的关注重点。根据研究内容所使用
 方法主要可分为三类。第一类：长久以来，人们普遍认为经济的快速增长是环境空气污染的
 重要原因。故有很多文献基于环境经济学的理论，通过环境库兹涅茨曲线集中研究经济因素
-对空气污染的影响[@李健2019;@李斌2014;@王立平2016；@吴雪萍2018]。虽然结论略有差异，
+对空气污染的影响[@李健2019;@李斌2014;@王立平2016;@吴雪萍2018]。虽然结论略有差异，
 但可能是由于所构建模型不同、数据的随机性或者指标选取不同的原因造成的，并且学者们一致
 认为经济增长与空气污染这两方面存在显著的相关关系。第二类：有学者立足于空气污染的时
 空分布特征，研究不同时间段不同地区引起空气污染的主要因素[@陈卫卫2019;@郭一鸣2019]。
