参考文献以及模型解释

--- a/report/papers/paper-excel-gamm.Rmd
+++ b/report/papers/paper-excel-gamm.Rmd
@@ -101,17 +101,27 @@ monthly excellent-grade air quality days.
 利用广义可加模型进行影响因素分析，可为有关部门的空气污染治理和城市化发展提供重要
 参考价值。
 
-对空气质量进行研究，已有文献主要集中在以下三类。第一类直接以空气质量指数为研究对
-象，运用时间序列研究方法以及支持向量机、BP神经网络等算法对未来的空气质量指数进行
-预测[@刘威2013;@闫妍2013;@胡世前2016]。第二类注重从时空演变角度出发注重探究空气
-质量的时空演变特征[@黄小刚2019;@柏玲2018]。第三类是空气质量影响因素分析。在进行
-影响因素分析时，因变量设置也有所不同，一类是以SO2等空气污染物为研究对象，以空气
-污染物排放量表征空气质量，进而进行影响因素分析[@李陈2016]，另一类是以空气质量指
-数AQI作为因变量。并且选取的影响因素侧重点不同，一部分研究侧重社会经济因素的影响
-[@柏玲2018;@王超2019;@郭一鸣2019;@吴雪萍2018],也有研究单独从气候或气象等自然因素
-出发进行影响因素研究[@周文博2019;@Rafael2019]，还有部分学者综合考虑社会经济因素、
-自然因素，并将空气主要污染物作为自变量进行分析而不是因变量[@李桂兰2019]。所用方
-法主要为多元回归、灰色关联度分析、空间分析方法[@柏玲2018;@王超2019;@王乐2019;@郭一鸣2019;@吴雪萍2018]
+对空气质量进行研究，已有文献主要集中在以下三类。
+
+第一类直接以空气质量指数为研究对
+象。刘威（2013）运用时间序列研究方法以及支持向量机算法、闫妍、张云鹏、李铠月等（2013）运
+用BP神经网络算法，以及其他类似文献均是以某个时间段的单个空气质量指数序列为研究对
+象进行预测[@刘威2013;@闫妍2013;@胡世前2016]。第二类注重从时空演变角度出发注重探究
+空气质量的时空演变特征。柏玲、姜磊、周海峰等（2018）利用贝叶斯空间滞后模型，得出长江经济
+带地区的AQI存在空间聚集特征，以及冬春高，夏秋低的季节变化趋势和空间溢出效应[@柏玲2018]。
+黄小刚、邵天杰、赵景波等（2019）除以上结论以外，还得出气象因子对空气质量指数的影
+响具有季节性[@黄小刚2019]。
+
+第三类是空气质量影响因素分析。在进行影响因素分析时，因变量设置也有所不同，如李陈（2016）以
+SO2等空气污染物为研究对象，以空气污染物排放量表征空气质量，进而进行影响因素分析[@李陈2016]，
+吴雪萍、高明、曾岚婷（2018），郭一鸣、蔺雪芹、边宇（2019）学者是以空气质量指数AQI作为因变量。
+同时选取的影响因素侧重点不同，王超、王国庆、吴利丰等（2019），吴雪萍、高明、曾岚婷（2018）
+等学者的研究侧重社会经济因素的影响[@柏玲2018;@王超2019;@郭一鸣2019;@吴雪萍2018],周文博（2019）、
+Rafael（2019）等学者的研究单独从气候或气象等自然因素出发进行影响因素研究[@周文博2019;@Rafael2019]，
+李桂兰（2019）等学者综合考虑社会经济因素、自然因素，并将空气主要污染物作为自变量进行分析而
+不是因变量[@李桂兰2019]。
+所用方法主要为多元回归（郭一鸣、蔺雪芹、边宇，2019）、灰色关联度分析（王超、王国庆、 吴利丰等，2019；王乐、 田东方，2019）、空间分析方法（柏玲、姜磊、周海峰等，2018；吴雪萍、高明、
+曾岚婷，2018）[@柏玲2018;@王超2019;@王乐2019;@郭一鸣2019;@吴雪萍2018]。
 
 基于以上文献分析，可以发现：第一、在考虑空气质量的影响因素时，鲜有研究引入地理因
 素。第二，在分析空气质量影响因素时，当前使用的方法很少有考虑影响因素对空气质量的
